raspberry-pi-4/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address: { address: 0.0.0.0, port_value: 8086 }
static_resources:
  listeners:
    - name: main
      address:
        socket_address: { address: 0.0.0.0, port_value: 8085 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: portainer
              use_remote_address: true
              normalize_path: true
              merge_slashes: true
              route_config:
                name: portainer
                virtual_hosts:
                  - name: portainer
                    domains:
                      - "*"
                    routes:
                      - match: { prefix: "/portainer/" }
                        route: { cluster: portainer, prefix_rewrite: "/" }
                      - match: { prefix: "/portainer" }
                        route: { cluster: portainer, prefix_rewrite: "/" }
              http_filters:
                - name: envoy.filters.http.router
                  typed_config: {}
  clusters:
  - name: portainer
    load_assignment:
      cluster_name: portainer
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 9000
